# camera_indicator_atem

./: .gitignore  LICENSE  Makefile  README.MD
back/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  atem-test.sh  atem.ps1  atem.py
back/8_5_3/: Readme.txt
back/src/: handler.rs  main.rs  models.rs
front/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
front/public/: index.826.js  index.css  index.html  messages.158.js  messages.css
front/src/: App.svelte  InfoDialog.svelte  global.css  main.ts  models.ts  router.js
front/src/components/: Alert.svelte  InfoDialog.svelte  Notifications.svelte  SenderMessageCard.svelte  SimpleAlert.svelte
front/src/models/: CameraAtem.model.ts  Message.model.ts
front/src/pages/: Main.svelte  Messages.svelte
front/src/stores/: fullscreen_weblock.store.ts  websocket.store.ts
