[package]
name = "camera_indicator_atem"
version = "0.1.0"
authors = ["Volodia PAROL-GUARINO"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]